# Interpretability_and_Explainability

./: .gitignore  Pneumonia_predictor.py  Q2_1_Exploratory_data_analysis.ipynb  Q2_2_Train_CNN.ipynb  Q2_3_integrated_gradients.ipynb  Q2_4_gradcam.ipynb  Q2_5_data_randomization_test.ipynb  README.md  Trainer.py  config.yaml  helper_funcs.py  notes.md  pyproject.toml  report_results 2.ipynb
output/logs/01_05_153452_1_init_cnn__bs4_lr0.001/: events.out.tfevents.1746106492.Olivers-MacBook-Air.local.87220.2
output/logs/01_05_154006_1_init_cnn__bs4_lr0.001/: events.out.tfevents.1746106806.Olivers-MacBook-Air.local.87220.3
output/logs/04_05_221343_V2_simple_3_conv_layers__bs32_lr0.0001_epoch20_img[512, 512]/: events.out.tfevents.1746389623.Olivers-MacBook-Air.local.17274.0
output/logs/04_05_222217_V2_simple_3_conv_layers__bs32_lr0.0001_epoch20_img_size512x512/: events.out.tfevents.1746390137.Olivers-MacBook-Air.local.17410.0
output/model/: 6_all_train_bs32_lr0.0001_epoch25_img_size224x224_config.yaml  6_random_labels_bs32_lr0.0001_epoch15_img_size224x224_config.yaml  6_smaller_img_bs32_lr0.0001_epoch15_img_size224x224_config.yaml  V2_simple_3_conv_layers__bs32_lr0.0001_epoch20_img_size512x512_config.yaml
p1/: 1_data_exploration.ipynb  2_lasso_regression.ipynb  3_multi-layer_perceptrons.ipynb  4_neural_additive_models.ipynb  combining_results.ipynb
p1/data/: test.parquet  train_val.parquet
p1/results/: MLP  NAM  combined_results.csv  lasso_regression
p1/trained_models/: MLP.pth  NAM.pth  lasso_regression.joblib
(+7 files in other folders)
